# Computational-Geometry-Project

./: .gitignore  CMakeLists.txt  README.md  ~$ναφορά.docx  Αναφορά.docx
matlab/: ReadFile.m  eigenvalues.m
src/: SceneMesh3D.cpp  SceneMesh3D.h
